bug fix: coins table > image getting smaller in size on small device and user not able see image properly

--- a/styles/_coins.scss
+++ b/styles/_coins.scss
@@ -1,5 +1,5 @@
 .coins-sst-container {
-    margin-top: 30px;
+    margin: 30px 0px 0 0;
     width: 100%;
     overflow-x: auto;
 }
@@ -8,6 +8,7 @@
     width: 100%;
     border-collapse: collapse;
     font-size: 13px;
+    padding-right: 15px;
 
     tr {
         border-top: 1px solid var(--border-color);
@@ -20,13 +21,15 @@
     }
 
     thead {
+        position: sticky;
+        top: -1px;
+        z-index: 10;
+        background: #fff;
+
         tr {
             th {
                 font-weight: 600;
                 position: sticky;
-                top: -13px;
-                z-index: 10;
-                background: #fff;
             }
         }
     }
